# Jupyter-Agent

./: .gitignore  ARCHITECTURE.md  jupyterhub_config.py
.github/workflows/: ci.yml  release.yml
docs/: COMPARISON.md  INSTALL.md
gateway/: Dockerfile  go.mod
gateway/cmd/jhub-ssh/: main.go
gateway/internal/hubclient/: client.go  client_test.go
gateway/internal/portfwd/: portfwd.go  portfwd_test.go
gateway/internal/sshconfig/: config.go  config_test.go
gateway/internal/sshgateway/: gateway.go  gateway_test.go
helm/jupyterhub-ssh/: Chart.yaml  values.yaml
helm/jupyterhub-ssh/templates/: _helpers.tpl  gateway-deployment.yaml  ingress.yaml  rbac.yaml
hub-extension/: pyproject.toml  setup.py
hub-extension/jupyterhub_ssh/: __init__.py  apihandlers.py  hooks.py  keys.py  sidecar_spec.py
hub-extension/tests/: conftest.py  test_hooks.py  test_keys.py
k8s/: cert-manager.yaml  gateway-deployment.yaml  ingress.yaml  network-policy-patch.yaml
lab-extension/: LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
lab-extension/jhub_vscode_labext/: __init__.py
lab-extension/jhub_vscode_labext/labextension/: install.json
lab-extension/src/: index.test.ts  index.ts
sidecar/: Dockerfile  entrypoint.sh  sidecar_spec.py  sshd_config
sidecar/tests/: test_sidecar_spec.py
tests/integration/: conftest.py  test_portfwd.py  test_ssh_flow.py
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
vscode-extension/src/: binary.ts  extension.ts  sshconfig.test.ts  sshconfig.ts  uri.test.ts  uri.ts
